# Modul-8-gRPC

./: Cargo.toml  README.md  build.rs
src/: grpc_client.rs  grpc_server.rs
